# calendar-reminder

./: .gitignore  README.md  main.py  pyproject.toml  remind-init.ps1  remind-init.sh  reminder.spec
.github/workflows/: build.yml  release.yml
src/: app.py  app_config.py  auth.py  calendar_service.py  config.py  fetch.py  main.py  notifications.py  reminder.py  reminder.pyw  tunnel_service.py
utils/: screen_geometry.py
